<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_land"
        android:scaleType="centerCrop"/>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ImageButton
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/avatar"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginVertical="50dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/name"
        />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text=""
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/birth"
        android:layout_marginHorizontal="50dp"
        />

    <EditText
        android:id="@+id/edit_birth"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text=""
        />

    <Button
        android:id="@+id/form_button"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimaryDark"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/form_button_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginVertical="50dp"
        android:layout_gravity="center"
        />

</LinearLayout>
</android.support.constraint.ConstraintLayout>


