<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_createaccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_land"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_red_vector" />


    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeImage"
        android:layout_marginTop="60dp"
        android:layout_centerVertical="true"
        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:text="@string/select_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        />
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccount"
        android:layout_marginVertical="10dp"
        android:layout_centerHorizontal="true">

    <LinearLayout
        android:id="@+id/listOfAccounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/avatar"
        android:visibility="gone"
        android:bottomRightRadius="7dp"
        android:bottomLeftRadius="7dp"
        android:topLeftRadius="7dp"
        android:topRightRadius="7dp"/>
        <LinearLayout
            android:id="@+id/account"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginHorizontal="5dp"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <ImageButton android:id="@+id/avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/avatar"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                xmlns:android="http://schemas.android.com/apk/res/android" />
            <TextView android:id="@+id/name"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="prova"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="center"
                android:fontFamily="@font/carter_one"
                xmlns:android="http://schemas.android.com/apk/res/android" />
        </LinearLayout>


    </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>