<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/lightblue"
       android:text="@string/settings"
       android:textColor="@color/colorPrimaryDark"
       android:textSize="20sp"
       android:padding="15dp"
       android:textStyle="bold"

       />
    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/settings_text"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"
      android:thumbTint="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:padding="15dp"
        android:textSize="16dp"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert"
            android:layout_marginBottom="5dp"
            android:textSize="18dp"
            />

    <EditText
        android:id="@+id/edit_box"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/text_input_border"
        android:gravity="center"
        android:textAlignment="center"
        android:backgroundTint="@color/colorAccent"
       />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_email"
            android:textColor="@color/white"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:padding="10dp" />
    </LinearLayout>
</LinearLayout>